--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "@platforms": ["android", "iPhone", "iPad"],
     "id": "H5E07CA0D",/*应用的标识，创建应用时自动生成，勿手动修改*/
     "name": "Partner",/*应用名称，程序桌面图标名称*/
@@ -218,7 +218,144 @@
 					"js/mui.min.js",
 					"img/1.jpg",
 					"img/6.png",
-					"css/my_mui_alter.css"
+					"css/my_mui_alter.css",
+					"images/2.png",
+					"js/common.js",
+					"images/3.png",
+					"images/1.png",
+					"images/8.png",
+					"images/1.jpg",
+					"css/mui.min.css",
+					"images/6.png",
+					"images/7.png",
+					"images/5.png",
+					"images/4.png"
+				],
+				"refer": [
+					"Main.html",
+					"SMSLogin.html",
+					"htmls/Register/ForgetPassword.html"
+				],
+				"priority": 0
+			},
+			"index.html": {
+				"resources": [
+					"js/main.js",
+					"images/67.png",
+					"images/71.png",
+					"js/jquery-1.7.min.js",
+					"images/64.png",
+					"js/slider.js",
+					"js/public.js",
+					"images/69.png",
+					"images/43.png",
+					"js/pulsClick.js",
+					"images/72.png",
+					"images/68.png",
+					"images/3.jpg",
+					"images/44.png",
+					"images/63.png",
+					"images/70.png",
+					"images/65.png",
+					"images/12.jpg",
+					"images/66.png",
+					"images/2.jpg",
+					"css/style.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"js/pulsCustomer.js"
+				],
+				"refer": [
+					"htmls/ActivitySpread/MobileActivitySelected.html"
+				],
+				"priority": 0
+			},
+			"htmls/MyUserInfo/MyMain.html": {
+				"resources": [
+					"images/58.png",
+					"images/55.png",
+					"images/1.png",
+					"images/42.png",
+					"images/56.png",
+					"images/57.png",
+					"images/38.png",
+					"images/54.png",
+					"images/46.png",
+					"images/59.png",
+					"images/33.png",
+					"images/2.jpg",
+					"images/36.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"htmls/MyMessage/MyMessage.html": {
+				"resources": [
+					"images/33.png",
+					"images/2.jpg",
+					"images/31.png",
+					"images/36.png",
+					"images/32.png",
+					"images/10.png",
+					"js/main.js",
+					"js/jquery-1.7.min.js",
+					"css/style.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Main.html": {
+				"resources": [
+					"index.html",
+					"js/mui.min.js",
+					"images/35.png",
+					"css/mui.min.css",
+					"css/style.css",
+					"images/37.png",
+					"images/34.png",
+					"images/36.png"
+				],
+				"refer": [
+					"htmls/MyUserInfo/MyMain.html",
+					"htmls/MyMessage/MyMessage.html",
+					"htmls/ActivitySpread/MobileActivitySelected.html"
+				],
+				"priority": 0
+			},
+			"htmls/ActivitySpread/MobileActivitySelected.html": {
+				"resources": [
+					"images/29.png",
+					"images/7.jpg",
+					"js/main.js",
+					"js/jquery-1.7.min.js",
+					"css/style.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"SMSLogin.html": {
+				"resources": [
+					"images/2.jpg",
+					"images/13.png",
+					"css/style.css",
+					"images/11.png",
+					"images/10.png",
+					"js/main.js",
+					"js/common.js",
+					"js/jquery-1.7.min.js",
+					"js/pulsClick.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"htmls/Register/ForgetPassword.html": {
+				"resources": [
+					"images/2.jpg",
+					"images/12.png",
+					"images/13.png",
+					"images/11.png",
+					"images/14.png",
+					"images/10.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -235,7 +372,6 @@
 				"img/24.png",
 				"img/31.png",
 				"img/32.png",
-				"js/common.js",
 				"js/mui.poppicker.js",
 				"img/35.png",
 				"img/30.png",
@@ -256,7 +392,6 @@
 				"css/mui.css",
 				"img/38.png",
 				"img/2.jpg",
-				"index.html",
 				"img/26.png",
 				"css/mui.dtpicker.css",
 				"img/34.png",
@@ -294,7 +429,6 @@
 				"img/37.png",
 				"img/36.png",
 				"img/18.png",
-				"css/mui.min.css",
 				"img/21.png",
 				"img/3.jpg",
 				"img/4.png",
