--- a/manifest.json
+++ b/manifest.json
@@ -234,7 +234,8 @@
 				"refer": [
 					"Main.html",
 					"SMSLogin.html",
-					"htmls/Register/ForgetPassword.html"
+					"htmls/Register/ForgetPassword.html",
+					"index.html"
 				],
 				"priority": 0
 			},
@@ -263,10 +264,28 @@
 					"css/style.css",
 					"js/mui.min.js",
 					"css/mui.min.css",
-					"js/pulsCustomer.js"
+					"js/pulsCustomer.js",
+					"images/35.png",
+					"images/37.png",
+					"images/34.png",
+					"images/36.png",
+					"images/38.png",
+					"images/10.png",
+					"images/58.png",
+					"images/42.png",
+					"images/59.png",
+					"images/31.png",
+					"images/55.png",
+					"images/56.png",
+					"images/54.png",
+					"images/32.png",
+					"images/46.png",
+					"images/57.png"
 				],
 				"refer": [
-					"htmls/ActivitySpread/MobileActivitySelected.html"
+					"htmls/ActivitySpread/MobileActivitySelected.html",
+					"htmls/MyUserInfo/MyMain.html",
+					"htmls/MyMessage/MyMessage.html"
 				],
 				"priority": 0
 			},
@@ -284,7 +303,11 @@
 					"images/59.png",
 					"images/33.png",
 					"images/2.jpg",
-					"images/36.png"
+					"images/36.png",
+					"js/main.js",
+					"js/jquery-1.7.min.js",
+					"css/style.css",
+					"images/35.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -313,7 +336,9 @@
 					"css/style.css",
 					"images/37.png",
 					"images/34.png",
-					"images/36.png"
+					"images/36.png",
+					"js/main.js",
+					"js/jquery-1.7.min.js"
 				],
 				"refer": [
 					"htmls/MyUserInfo/MyMain.html",
@@ -328,7 +353,11 @@
 					"images/7.jpg",
 					"js/main.js",
 					"js/jquery-1.7.min.js",
-					"css/style.css"
+					"css/style.css",
+					"images/43.png",
+					"js/pulsClick.js",
+					"images/3.jpg",
+					"images/44.png"
 				],
 				"refer": [],
 				"priority": 0
